--- a/details.html
+++ b/details.html
@@ -10,6 +10,7 @@
 <body>
 
     <div class="details"></div>
-    <script src="js/script.js"></script>
+    <a href="index.html"><button>HOME</button></a>
+    <script src="js/details.js"></script>
 </body>
 </html>
