--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
     <div class="results"></div>
     <script src="js/script.js"></script>
+    <a href="contact.html"><button>CONTACT</button></a>
 </body>
 </html>
 
