--- a/contact.html
+++ b/contact.html
@@ -11,9 +11,9 @@
     <form class="contact">
         <div class="cont">
             <h2>Contact me.</h2>
-            <label for="name">Your name: </label>
-            <input type="text" id="subject" name="name">
-            <span class="nameTxt"></span>
+            <label for="names">Your names: </label>
+            <input type="text" id="name" names="names">
+            <span class="namesTxt"></span>
         </div>
         <div class="cont">
             <label for="subject">Subject: </label>
@@ -34,6 +34,7 @@
             <input type="submit" value="submit">
         </div>
     </form>
+    <a href="index.html"><button>HOME</button></a>
     <script src="js/contact.js"></script>
 </body>
 </html>
