--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
     <form class="contact">
         <div class="cont">
             <h2>Contact me.</h2>
-            <label for="names">Your names: </label>
+            <label for="names">Name: </label>
             <input type="text" id="name" names="names">
             <span class="namesTxt"></span>
         </div>
